Fixed the unclickable links on home page because they were behind the big H1.

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -874,6 +874,7 @@ header {
 			font-weight: 700 !important;
 			color: rgba(255, 255, 255, .08);
 			text-transform: uppercase;
+			z-index: -1;
 
 			@include media-breakpoint-up(lg) {
 				font-size: 10em;
@@ -2192,6 +2193,7 @@ textarea.form-control {
 	}
 }
 
+//My styles
 .sticky-top {
 	background-color: $black;
 	opacity: .8;
